--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,17 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cs420.unrmaps" >
 
-    <uses-permission android:name="com.cs420.googlemaps.permission.MAPS_RECEIVE"/>
+    <uses-permission android:name="com.cs420.googlemaps.permission.MAPS_RECEIVE" />
 
     <permission
         android:name="com.cs420.googlemaps.permission.MAPS_RECEIVE"
-        android:protectionLevel="signature"/>
+        android:protectionLevel="signature" />
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
@@ -26,7 +25,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".Main"
+            android:name="com.cs420.unrmaps.Main"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,9 +33,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyCeZ6FnPNUpOOl_KPDBrjqOoK8I5M5msfc"/>
+            android:value="AIzaSyCeZ6FnPNUpOOl_KPDBrjqOoK8I5M5msfc" />
+
+        <activity
+            android:name="com.cs420.unrmaps.FloorPlanActivity"
+            android:label="@string/title_activity_floor_plan" >
+        </activity>
     </application>
 
 </manifest>
